imported font awesome

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <title>Recipes homepage</title>
   </head>
   <body>
+    <h1>Recipe collection</h1>
+    <h3>
+      Find a variety of inspiring recipes that are easy, delicious and healthy
+      here
+    </h3>
+    <i class="fa-brands fa-instagram"></i>
+    <script
+      src="https://kit.fontawesome.com/d45149c6c3.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
