section header and hero added with styles

--- a/index.html
+++ b/index.html
@@ -24,12 +24,54 @@
     <title>Recipes homepage</title>
   </head>
   <body>
-    <h1>Recipe collection</h1>
-    <h3>
-      Find a variety of inspiring recipes that are easy, delicious and healthy
-      here
-    </h3>
-    <i class="fa-brands fa-instagram"></i>
+    <section class="header">
+      <nav class="navbar navbar-expand-lg navbar-light menu">
+        <div class="container-fluid">
+          <a class="navbar-brand logo" href="#">
+            <img src="/images/logo.png" alt="logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active clicked" aria-current="page" href="/"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Recipe</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+
+    <section class="hero">
+      <div class="hero__text">
+        <h1 class="">Recipe collection</h1>
+        <h3>
+          Find a variety of inspiring recipes that are easy, delicious, and
+          healthy here
+        </h3>
+      </div>
+    </section>
     <script
       src="https://kit.fontawesome.com/d45149c6c3.js"
       crossorigin="anonymous"
