added section main with content

--- a/index.html
+++ b/index.html
@@ -72,6 +72,57 @@
         </h3>
       </div>
     </section>
+
+    <section class="main">
+      <div class="container main__container">
+        <div class="row">
+          <div class="col">
+            <img src="/images/image1-main.png" alt="dessert with fruits" />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+          <div class="col">
+            <img src="/images/image2-main.png" alt="meat steak" />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <img
+              src="/images/image3-main.png"
+              alt="mashed avocado with vegetables"
+            />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+          <div class="col">
+            <img src="/images/image4-main.png" alt="meatballs" />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <img src="/images/image5-main.png" alt="fish with sides" />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+          <div class="col">
+            <img src="/images/image6-main.png" alt="pesto pasta" />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <img
+              src="/images/image7-main.png"
+              alt="pancakes with blueberries"
+            />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+          <div class="col">
+            <img src="/images/image8-main.png" alt="fruits" />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://kit.fontawesome.com/d45149c6c3.js"
       crossorigin="anonymous"
