media queries added

--- a/index.html
+++ b/index.html
@@ -75,52 +75,88 @@
 
     <section class="main">
       <div class="container main__container">
-        <div class="row">
+        <div class="row text-center">
           <div class="col">
-            <img src="/images/image1-main.png" alt="dessert with fruits" />
+            <img
+              class="img-fluid"
+              src="/images/image1-main.png"
+              alt="dessert with fruits"
+            />
             <p class="main__text">Wet Vegetable Spring Rolls</p>
           </div>
           <div class="col">
-            <img src="/images/image2-main.png" alt="meat steak" />
+            <img
+              class="img-fluid"
+              src="/images/image2-main.png"
+              alt="meat steak"
+            />
             <p class="main__text">Wet Vegetable Spring Rolls</p>
           </div>
         </div>
-        <div class="row">
+        <div class="row text-center">
           <div class="col">
             <img
+              class="img-fluid"
               src="/images/image3-main.png"
               alt="mashed avocado with vegetables"
             />
             <p class="main__text">Wet Vegetable Spring Rolls</p>
           </div>
           <div class="col">
-            <img src="/images/image4-main.png" alt="meatballs" />
+            <img
+              class="img-fluid"
+              src="/images/image4-main.png"
+              alt="meatballs"
+            />
             <p class="main__text">Wet Vegetable Spring Rolls</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <img src="/images/image5-main.png" alt="fish with sides" />
-            <p class="main__text">Wet Vegetable Spring Rolls</p>
-          </div>
-          <div class="col">
-            <img src="/images/image6-main.png" alt="pesto pasta" />
-            <p class="main__text">Wet Vegetable Spring Rolls</p>
-          </div>
-        </div>
-        <div class="row">
+        <div class="row text-center">
           <div class="col">
             <img
+              class="img-fluid"
+              src="/images/image5-main.png"
+              alt="fish with sides"
+            />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+          <div class="col">
+            <img
+              class="img-fluid"
+              src="/images/image6-main.png"
+              alt="pesto pasta"
+            />
+            <p class="main__text">Wet Vegetable Spring Rolls</p>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col">
+            <img
+              class="img-fluid"
               src="/images/image7-main.png"
               alt="pancakes with blueberries"
             />
             <p class="main__text">Wet Vegetable Spring Rolls</p>
           </div>
           <div class="col">
-            <img src="/images/image8-main.png" alt="fruits" />
+            <img class="img-fluid" src="/images/image8-main.png" alt="fruits" />
             <p class="main__text">Wet Vegetable Spring Rolls</p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div>
+        <img src="/images/logo.png" alt="logo" />
+      </div>
+      <div>
+        <i class="fa-brands fa-square-facebook footer__icon"></i>
+        <i class="fa-brands fa-instagram footer__icon"></i>
+        <i class="fa-brands fa-linkedin footer__icon"></i>
+      </div>
+      <div>
+        <p class="footer__rights">© 2021 SheCodes All rights reserved.</p>
       </div>
     </section>
     <script
