section menu, section footer added to about page

--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
     <title>About me</title>
   </head>
   <body>
-    <section class="header">
-      <nav class="navbar navbar-expand-lg navbar-light menu">
+    <section class="header about-header">
+      <nav class="navbar navbar-expand-lg navbar-light menu about-menu">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="#">
             <img src="/images/logo.png" alt="logo" />
@@ -88,6 +88,62 @@
             <i class="fa-brands fa-linkedin about-icon"></i>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="menu">
+      <div class="menu__heading">Favorite Recipe</div>
+      <div class="menu_favorite">
+        <div>
+          <div>
+            <img src="/images/favorite1.png" alt="dessert" />
+          </div>
+          <div>
+            <h4>Wet Vegetable Spring Rolls</h4>
+          </div>
+          <div>
+            Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </div>
+        </div>
+        <div>
+          <div>
+            <img src="/images/favorite 2.png" alt="crackers" />
+          </div>
+          <div>
+            <h4>Wet Vegetable Spring Rolls</h4>
+          </div>
+          <div>
+            Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </div>
+        </div>
+        <div>
+          <div>
+            <img src="/images/favorite 3.png" alt="pancakes" />
+          </div>
+          <div>
+            <h4>Wet Vegetable Spring Rolls</h4>
+          </div>
+          <div>
+            Id ac lorem maecenas rhoncus lobortis turpis morbi. Id ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div>
+        <img src="/images/logo.png" alt="logo" />
+      </div>
+      <div>
+        <i class="fa-brands fa-square-facebook footer__icon"></i>
+        <i class="fa-brands fa-instagram footer__icon"></i>
+        <i class="fa-brands fa-linkedin footer__icon"></i>
+      </div>
+      <div>
+        <p class="footer__rights">© 2021 SheCodes All rights reserved.</p>
       </div>
     </section>
 
