--- a/about.html
+++ b/about.html
@@ -83,9 +83,29 @@
           </div>
           <div class="about-text__links">
             <p class="links-text">Follow me:</p>
-            <i class="fa-brands fa-square-facebook about-icon"></i>
-            <i class="fa-brands fa-instagram about-icon"></i>
-            <i class="fa-brands fa-linkedin about-icon"></i>
+            <div>
+              <a
+                class="footer__icon"
+                href="https://www.facebook.com/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-square-facebook"></i>
+              </a>
+              <a
+                class="footer__icon"
+                href="https://www.instagram.com/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a
+                class="footer__icon"
+                href="https://www.linkedin.com/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -138,9 +158,27 @@
         <img src="/images/logo.png" alt="logo" />
       </div>
       <div>
-        <i class="fa-brands fa-square-facebook footer__icon"></i>
-        <i class="fa-brands fa-instagram footer__icon"></i>
-        <i class="fa-brands fa-linkedin footer__icon"></i>
+        <a
+          class="footer__icon"
+          href="https://www.facebook.com/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-square-facebook"></i>
+        </a>
+        <a
+          class="footer__icon"
+          href="https://www.instagram.com/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          class="footer__icon"
+          href="https://www.linkedin.com/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
       <div>
         <p class="footer__rights">© 2021 SheCodes All rights reserved.</p>
