--- a/index.html
+++ b/index.html
@@ -151,9 +151,27 @@
         <img src="/images/logo.png" alt="logo" />
       </div>
       <div>
-        <i class="fa-brands fa-square-facebook footer__icon"></i>
-        <i class="fa-brands fa-instagram footer__icon"></i>
-        <i class="fa-brands fa-linkedin footer__icon"></i>
+        <a
+          class="footer__icon"
+          href="https://www.facebook.com/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-square-facebook"></i>
+        </a>
+        <a
+          class="footer__icon"
+          href="https://www.instagram.com/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          class="footer__icon"
+          href="https://www.linkedin.com/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
       <div>
         <p class="footer__rights">© 2021 SheCodes All rights reserved.</p>
