--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <section class="header about-header">
-      <nav class="navbar navbar-expand-lg navbar-light menu about-menu">
+      <nav class="navbar navbar-expand-lg navbar-light menu about-nav">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="#">
             <img src="/images/logo.png" alt="logo" />
@@ -111,7 +111,7 @@
       </div>
     </section>
 
-    <section class="menu">
+    <section class="menu about-menu">
       <div class="menu__heading">Favorite Recipe</div>
       <div class="menu_favorite">
         <div>
