--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <section class="footer">
       <div>
-        <img src="/images/logo.png" alt="logo" />
+        <img class="footer__logo" src="/images/logo.png" alt="logo" />
       </div>
       <div>
         <a
