about page media query added

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg navbar-light menu about-nav">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="#">
-            <img src="/images/logo.png" alt="logo" />
+            <img class="img-fluid" src="/images/logo.png" alt="logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -65,11 +65,11 @@
       <div>
         <h1 class="h1-about">About Me</h1>
       </div>
-      <div class="main-about__content">
-        <div class="main-about__img">
-          <img src="/images/about-me.png" alt="portrait" />
+      <div class="row main-about__content">
+        <div class="col-md-6 main-about__img">
+          <img class="img-fluid" src="/images/about-me.png" alt="portrait" />
         </div>
-        <div class="about-text">
+        <div class="col-md-6 about-text">
           <div class="about-text__heading">
             <h2>Shelley White</h2>
           </div>
@@ -113,10 +113,10 @@
 
     <section class="menu about-menu">
       <div class="menu__heading">Favorite Recipe</div>
-      <div class="menu_favorite">
-        <div>
+      <div class="row menu_favorite">
+        <div class="col-md-4 menu__item">
           <div>
-            <img src="/images/favorite1.png" alt="dessert" />
+            <img class="img-fluid" src="/images/favorite1.png" alt="dessert" />
           </div>
           <div>
             <h4>Wet Vegetable Spring Rolls</h4>
@@ -126,9 +126,13 @@
             consectetur volutpat commodo mi suspendisse odio.
           </div>
         </div>
-        <div>
+        <div class="col-md-4 menu__item">
           <div>
-            <img src="/images/favorite 2.png" alt="crackers" />
+            <img
+              class="img-fluid"
+              src="/images/favorite 2.png"
+              alt="crackers"
+            />
           </div>
           <div>
             <h4>Wet Vegetable Spring Rolls</h4>
@@ -138,9 +142,13 @@
             consectetur volutpat commodo mi suspendisse odio.
           </div>
         </div>
-        <div>
+        <div class="col-md-4 menu__item">
           <div>
-            <img src="/images/favorite 3.png" alt="pancakes" />
+            <img
+              class="img-fluid"
+              src="/images/favorite 3.png"
+              alt="pancakes"
+            />
           </div>
           <div>
             <h4>Wet Vegetable Spring Rolls</h4>
@@ -155,7 +163,7 @@
 
     <section class="footer">
       <div>
-        <img src="/images/logo.png" alt="logo" />
+        <img class="footer__logo" src="/images/logo.png" alt="logo" />
       </div>
       <div>
         <a
