created recipe page with content ans css

--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/about-page.css" />
     <title>About me</title>
   </head>
   <body>
@@ -50,7 +51,7 @@
                 <a class="nav-link active clicked" href="/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Recipe</a>
+                <a class="nav-link" href="/recipe.html">Recipe</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
