recipe page media query added

--- a/recipe.html
+++ b/recipe.html
@@ -68,6 +68,7 @@
       <div class="collection__recipe">
         <div class="collection__img">
           <img
+            class="img-fluid"
             src="/images/collection-recipe 1.png"
             alt="dessert with strawberry"
           />
@@ -113,7 +114,11 @@
 
       <div class="collection__recipe">
         <div class="collection__img">
-          <img src="/images/collection-recipe-2.png" alt="meatballs" />
+          <img
+            class="img-fluid"
+            src="/images/collection-recipe-2.png"
+            alt="meatballs"
+          />
         </div>
         <div class="collection__text">
           <div class="collection__text-heading">Wet Vegetable Spring Rolls</div>
@@ -156,7 +161,11 @@
 
       <div class="collection__recipe">
         <div class="collection__img">
-          <img src="/images/collection-recipe 3.png" alt="vegan bowl" />
+          <img
+            class="img-fluid"
+            src="/images/collection-recipe 3.png"
+            alt="vegan bowl"
+          />
         </div>
         <div class="collection__text">
           <div class="collection__text-heading">Wet Vegetable Spring Rolls</div>
