--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <section class="header about-header">
       <nav class="navbar navbar-expand-lg navbar-light menu about-nav">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
+          <a class="navbar-brand logo" href="#" title="Homepage">
             <img class="img-fluid" src="/images/logo.png" alt="logo" />
           </a>
           <button
@@ -45,16 +45,31 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="/"
+                  title="Homepage"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active clicked" href="/about.html">About</a>
+                <a
+                  class="nav-link active clicked"
+                  href="/about.html"
+                  title="About Shelly"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/recipe.html">Recipe</a>
+                <a class="nav-link" href="/recipe.html" title="Best recipes"
+                  >Recipe</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact details"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
