--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <section class="header">
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
+          <a class="navbar-brand logo" href="#" title="Homepage">
             <img src="/images/logo.png" alt="logo" />
           </a>
           <button
@@ -42,16 +42,29 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="/"
+                  title="Homepage"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About Shelly"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/recipe.html">Recipe</a>
+                <a class="nav-link" href="/recipe.html" title="Best recipes"
+                  >Recipe</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link active clicked" href="/contact.html"
+                <a
+                  class="nav-link active clicked"
+                  href="/contact.html"
+                  title="Contact details"
                   >Contact</a
                 >
               </li>
