--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="header">
       <nav class="navbar navbar-expand-lg navbar-light menu">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="#">
+          <a class="navbar-brand logo" href="#" title="Homepage">
             <img src="/images/logo.png" alt="logo" />
           </a>
           <button
@@ -44,18 +44,28 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active clicked" aria-current="page" href="/"
+                <a
+                  class="nav-link active clicked"
+                  aria-current="page"
+                  href="/"
+                  title="Homepage"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About Shelly"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/recipe.html">Recipe</a>
+                <a class="nav-link" href="/recipe.html" title="Best recipes"
+                  >Recipe</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact details"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
