contact page css updated (section contacts)

--- a/contact.html
+++ b/contact.html
@@ -87,23 +87,23 @@
           />
         </div>
         <div class="contacts__text">
-          <div>
-            <p>Address</p>
-            <p>
+          <div class="contacts__text-item">
+            <p class="text-heading">Address</p>
+            <p class="text-contact">
               <i class="fa-solid fa-location-dot"></i>
               021 Hollywood Boulevard, Los Angeles
             </p>
           </div>
-          <div>
-            <p>Email</p>
-            <p>
+          <div class="contacts__text-item">
+            <p class="text-heading">Email</p>
+            <p class="text-contact">
               <i class="fa-solid fa-envelope"></i>
               <a href="mailto:info@shecodes.io">info@shecodes.io</a>
             </p>
           </div>
-          <div>
-            <p>Phone</p>
-            <p>
+          <div class="contacts__text-item">
+            <p class="text-heading">Phone</p>
+            <p class="text-contact">
               <i class="fa-solid fa-phone"></i>
               <a href="tel:0213456789">021 3456 789</a>
             </p>
