--- a/index.html
+++ b/index.html
@@ -187,6 +187,15 @@
         <p class="footer__rights">© 2021 SheCodes All rights reserved.</p>
       </div>
     </section>
+
+    <p class="text-center mt-5">
+      Open source code on
+      <a
+        target="_blank"
+        href="https://github.com/orchid-cloud/recipe-collection-project.git"
+        >GitHub</a
+      >
+    </p>
     <script
       src="https://kit.fontawesome.com/d45149c6c3.js"
       crossorigin="anonymous"
